<resources>
    <string name="app_name">ChildApp</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="days">DAYS</string>
    <string name="seasons">SEASONS</string>
    <string name="months">MONTHS</string>
    <string name="learning_activities">LEARNING ACTIVITIES</string>
    <string name="play_game">PLAY GAME</string>
    <string name="log_out">Log Out</string>
    <string name="question">Question</string>
    <string name="trueButton">True</string>
    <string name="falseButton">False</string>
    <string name="nextButton">Next</string>
    <string name="mul1">4 * 5 = 20</string>
    <string name="mul2">3 * 9 = 12</string>
    <string name="mul3">2 * 0 = 2</string>
    <string name="mul4">3 * 5 = 15</string>
    <string name="mul5">7 * 1 = 7</string>
    <string name="mul6">8 * 9 = 72</string>
    <string name="mul7">1 * 5 = 0</string>
    <string name="mul8">0 * 1 = 0</string>
    <string name="mul9">6 * 3 = 18</string>
    <string name="mul10">10 * 10 = 10</string>
    <string name="multiplication_with_t_f">Multiplication with T / F</string>
    <string name="days_of_the_week">DAYS OF THE WEEK</string>
    <string name="first_day">First day</string>
    <string name="second_day">Second day</string>
    <string name="third_day">Third Day</string>
    <string name="fourth_day">Fourth Day</string>
    <string name="fifth_day">Fifth Day</string>
    <string name="sixth_day">Sixth Day</string>
    <string name="seventh_day">Seventh Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="days_of_week">days of the week</string>
    <string name="down">down</string>
    <string name="helper">helper</string>
    <string name="multiplication_with_true_false"><![CDATA[Multiplication With True & False]]></string>
    <string name="_2_month">2.month</string>
    <string name="_4_month">4.month</string>
    <string name="_3_month">3.month</string>
    <string name="_5_month">5.month</string>
    <string name="_1_month">1.month</string>
    <string name="_6_month">6.month</string>
    <string name="_10_month">10.month</string>
    <string name="_9_month">9.month</string>
    <string name="_11_month">11.month</string>
    <string name="_12_month">12.month</string>
    <string name="click_buttons_to_learn_months">Click Buttons To Learn Months</string>
    <string name="_8_month">8.month</string>
    <string name="_7_month">7.month</string>
    <string name="ino_text">Fill in the blanks with correct number.</string>
    <string name="october">october</string>
    <string name="february">february</string>
    <string name="june">june</string>
    <string name="january">january</string>
    <string name="december">december</string>
    <string name="april">april</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="july">july</string>
    <string name="may">may</string>
    <string name="march">march</string>
    <string name="november">november</string>
    <string name="number">number</string>
    <string name="seasons_scrollview">seasons scrollView</string>
    <string name="scroll_to_learn">Scroll to learn</string>
    <string name="spring_side_of_the_tree">spring side of the tree</string>
    <string name="summer_side_of_the_tree">summer side of the tree</string>
    <string name="winter_side_of_the_tree">winter side of the tree</string>
    <string name="autumn_side_of_the_tree">autumn side of the tree</string>
    <string name="spring">Spring</string>
    <string name="spring_marks_the_beginning_of_the_blooming_of_flowers_the_temperatures_are_slightly_chilly_and_the_daylight_hours_become_longer_than_they_were_in_winter_it_may_also_be_windy_or_chilly_sometimes">Spring marks the beginning of the blooming of flowers. The temperatures are slightly chilly, and the daylight hours become longer than they were in winter. It may also be windy or chilly sometimes.</string>
    <string name="summer">Summer</string>
    <string name="summer_season_is_when_the_temperature_increases_and_it_becomes_hot_people_enjoy_cool_breezes_and_ice_creams_to_keep_themselves_cool_during_this_season_it_is_also_the_season_when_you_get_ripe_mangoes">Summer season is when the temperature increases and it becomes hot. People enjoy cool breezes and ice creams to keep themselves cool during this season. It is also the season when you get ripe mangoes!</string>
    <string name="autumn">Autumn</string>
    <string name="autumn_marks_the_transition_towards_winter_animals_go_into_hibernation_and_the_trees_start_shedding_their_leaves_in_preparation_for_winter_the_days_become_shorter_and_the_temperatures_become_chilly">Autumn marks the transition towards winter. Animals go into hibernation, and the trees start shedding their leaves in preparation for winter. The days become shorter, and the temperatures become chilly.</string>
    <string name="winter">Winter</string>
    <string name="winter_is_the_white_season_the_temperature_becomes_very_cold_and_the_daylight_becomes_even_less_in_some_countries_the_sun_sets_before_4_pm_it_also_snows_in_some_places">Winter is the white season! The temperature becomes very cold, and the daylight becomes even less. In some countries, the sun sets before 4 pm! It also snows in some places.</string>
    <string name="s">S</string>
    <string name="sm">SM</string>
    <string name="a">A</string>
    <string name="w">W</string>
    <string name="select_one_of_the_topics">select one of the topics</string>
    <string name="seasons1">Seasons</string>
    <string name="directions">Directions</string>
    <string name="view_of_question">view of question</string>
    <string name="find_the_word">Find the word</string>
    <string name="submit">Submit</string>
    <string name="quit">Quit</string>
    <string name="click_to_learn_days_of_the_week">Click <b><FONT COLOR="red">HERE</FONT></b> To Learn Days Of The Week</string>
    <string name="click_the_image_to_listen_to_the_song">Click the image to listen to the song</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Please try again!</string>
    <string name="next_button">Next</string>
    <string name="question_past">Go past</string>
    <string name="question_corner">At the corner of …</string>
    <string name="question_straight">Go straight</string>
    <string name="question_opposite">opposite</string>
    <string name="question_between">Between</string>
    <string name="question_next">Next to</string>
    <string name="question_left">Turn left</string>
    <string name="question_around">Turn around</string>
    <string name="question_cross">Cross the road</string>
    <string name="question_right">Turn right</string>
    <string name="choose_category">Choose Category</string>
    <string name="similar_pictures_fruits">Similar Pictures Fruits</string>
    <string name="similar_pictures_vegetables">Similar Pictures Vegetables</string>
    <string name="similar_pictures_animals">Similar Pictures Animals</string>
    <string name="fruits">fruits</string>
    <string name="vegetables">vegetables</string>
    <string name="animals">animals</string>
    <string name="go_back_home">go back home</string>
    <string name="categoriies">Categoriies</string>
    <string name="categories">Categories</string>
    <string name="find_similar_picture">Find Similar Picture</string>
    <string name="basis_image">basis image</string>
    <string name="next">next</string>
    <string name="third_option">third option</string>
    <string name="first_option">first option</string>
    <string name="second_option">second option</string>
    <string name="fourth_option">fourth option</string>
    <string name="congratulations">Congratulations</string>
    <string name="retry">retry</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="correct_answer_result">correct answer result</string>
    <string name="star4">star4</string>
    <string name="star3">star3</string>
    <string name="star2">star2</string>
    <string name="star1">star1</string>
    <string name="star">star</string>
    <string name="wrong_answer_result">wrong answer result</string>
    <string name="check_score">Check Score</string>
    <string name="next_question">Next Question</string>
    <string name="en">EN</string>
    <string name="tr">TR</string>
    <string name="language_options">Language Options:</string>
    <string name="multiplication">Multiplication</string>
    <string name="d_rect_on">Dırectıon</string>
    <string name="multiplication_tables">Multiplication Table</string>
    <string name="direction">DIRECTION</string>
    <string name="similarity_game">SIMILARITY GAME</string>
    <string name="command1">Click speaker to hear pronunciation</string>
    <string name="go_straight">go straight</string>
    <string name="go_past">Go past ...</string>
    <string name="corner">At the corner of ...</string>
    <string name="cross">Cross the Road</string>
    <string name="right">Turn right</string>
    <string name="left">Turn left</string>
    <string name="between">Between</string>
    <string name="turn_around">Turn around</string>
    <string name="next_to">Next to</string>
    <string name="opposite">Opposite</string>
    <string name="score">SCORE</string>
    <string name="direction_game">DIRECTIONS GAME</string>
    <string name="multiplicaiton">MULTIPLICATION</string>
    <string name="days_game">DAYS GAME</string>
    <string name="seasons_game">SEASONS GAME</string>
    <string name="menu">MENU</string>
    <string name="monday1">First Day (Mon.)</string>
    <string name="tuesday1">Second Day ( Tues. )</string>
    <string name="wednesday1">Third Day ( Tues. )</string>
    <string name="thursday1">Fourth Day ( Tues. )</string>
    <string name="friday1">Fifth Day ( Tues. )</string>
    <string name="saturday1">Sixth Day ( Tues. )</string>
    <string name="sunday1">Seventh Day ( Tues. )</string>
    <string name="match_the_day_numbers_with_their_names">Match the day numbers with their names</string>

</resources>