<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3DEF4"
    tools:context=".DaysGameActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:text="@string/match_the_day_numbers_with_their_names"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="584dp"
        android:layout_below="@+id/heading"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:context=".MainActivity">

        <!--    android:backgroundTint="#C3BEBE"-->
        <LinearLayout
            android:layout_width="171dp"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/target1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#89af8cbd"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test1"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/saturday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#669BC5"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test2"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/wednesday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#88E48C"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test3"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/thursday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6DC84"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test4"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/monday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B797EF"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test5"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/sunday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EA9089"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test6"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/tuesday"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/target7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#53B5AC"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/test7"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/friday"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btntarget"
            android:layout_width="174dp"
            android:layout_height="501dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:padding="10dp"
                android:text="@string/first_day"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/directionGameButton"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/second_day"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button3"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/third_day"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button4"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/fourth_day"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button5"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/fifth_day"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button6"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/sixth_day"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button7"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:backgroundTint="#F8BE68"
                android:text="@string/seventh_day"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>