<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/b2"
    tools:context=".MultiplicationActivity">


    <TextView
        android:id="@+id/textView17"
        android:layout_width="248dp"
        android:layout_height="101dp"
        android:text="@string/multiplication_with_true_false"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/mul1"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonTrue"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="131dp"
            android:layout_height="74dp"
            android:text="@string/trueButton"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonFalse"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="131dp"
            android:layout_height="74dp"
            android:text="@string/falseButton"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:enabled="false"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:textColor="#2C2828"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>